--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.4.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.3.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
