--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "globals": "^15.3.0",
+    "prettier": "3.3.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   }
